rearrange pics, add status page, add link to docs

--- a/status.html
+++ b/status.html
@@ -88,36 +88,10 @@
 							<div class="row">
 								<div class="col-12">
 									<header class="major">
-										<h2>Documents</h2>
+										<h2>Phorge Equipment Status</h2>
 									</header>
-									<p>Here is a list of documents and forms that you may need at the makerspace!</p>
-									<ul>
-										<li>
-											<a href="https://form.jotform.com/230071503613442">Accidental
-												Waiver & Release of Liability Form</a>: releases Phorge Inc. from
-											liability (our insurance made us do it!)
-										</li>
-										<li>
-											<a href="https://form.jotform.com/230071503613442">Makerspace Utilization
-												Contract</a>: for renting the makerspace and it's equipment to teach a
-											class.
-										</li>
-										<li>
-											<a href="https://form.jotform.com/230071503613442">Accident Form</a>: had an
-											accident or injury? Fill out this form.
-										</li>
-										<li>
-											<a
-												href="https://docs.google.com/spreadsheets/d/12BddWAzfEDy2UwOPWBnjel-9evJhU4HBBPfYNUIoBiA/edit#gid=721249877">Phorge
-												Equipment Status</a>: instantly check the status of any equipment at the
-											makerspace.
-										</li>
-										<li>
-											<a href="#">Approved Material List</a>: when you need to know what
-											types/brands of material you can use at the space.
-										</li>
-									</ul>
-									</p>
+									<iframe style="width: 100%; height: 450px;"
+										src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbHwTWyzAb-oT-zcEToyRYrGP9VM_5soOe39NaZDH842eFan_myVE2aYPKf8UH1ljRMJKeIcZS0Jl7/pubhtml?gid=721249877&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A3:H13"></iframe>
 								</div>
 							</div>
 						</section>
