add equipment page and resources menu buttons

--- a/equipment.html
+++ b/equipment.html
@@ -73,7 +73,7 @@
 					</li> -->
 					<li><a href="classes.html">CLASSES</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
-					<li><a href="equipment.html">EQUIPMENT</a></li>
+					<li class="current"><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 					<li>
 						<a href="#">RESOURCES</a>
@@ -100,46 +100,9 @@
 							<div class="row">
 								<div class="col-12">
 									<header class="major">
-										<h2>Welcome! (please read!)</h2>
+										<h2>Equipment</h2>
 									</header>
-									<p>Thank you for your membership to Phorge Makerspace!</p>
-									<p>We look forward to helping you learn more about the tools and equipment that we
-										have available in the makerspace. Since we began four years ago, we have seen an
-										amazing community of makers come together to help make this happen and we are
-										grateful to everyone who has helped contribute along the way.
-									</p>
-									<h2>There are a few things left to do in order for you to utilize the makerspace
-									</h2>
-									<p>
-									<ul>
-										<li>Create an account at <a href="http://wyoma.org">wyoma.org</a> (our online
-											learning platform)</li>
-										<li>Take the "General Makerspace Safety" course</li>
-										<li><a href="https://form.jotform.com/230071503613442">Fill out the Accidental
-												Waiver & Release of Liability Form</a></li>
-										<li><a href="https://discord.gg/uc8tV3q">Join our Discord</a> to chat live with
-											other members</li>
-									</ul>
-									</p>
-									<p>Once you've completed those tasks, go ahead and come on down to our open
-										hours to meet the crew in person and complete the last few tasks needed for you
-										to get started – this will include receiving a passcode for the door which will
-										give you access to the makerspace 24 hours a day.
-									</p>
-									<h3 style="font-style:italic;">Remember, if you’re under 18 years old, please bring
-										a parent or guardian with
-										you.
-									</h3>
-									<br>
-									<p>
-										If you have any other questions, we encourage you to ask them in our community
-										Discord channel, or you can also find our traditional contact information below.
-									</p>
-									<p>
-										So thank you for joining and we're so happy to have you on board. Your support
-										will help us expand our education platform and further our reach into the
-										community of makers.
-									</p>
+									<p>Equipment list coming soon!</p>
 								</div>
 							</div>
 						</section>
