--- a/index.html
+++ b/index.html
@@ -79,7 +79,19 @@
 					</li> -->
 					<li><a href="classes.html">CLASSES</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
+					<li><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
+					<li>
+						<a href="#">RESOURCES</a>
+						<ul>
+							<li><a href="docs.html">Documents</a></li>
+							<li><a href="status.html">Equipment Status</a></li>
+							<li>
+								<a href="https://github.com/phorgemakerspace/phorgemakerspace.github.io/wiki">Maintenance
+									Wiki</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 		</section>
