--- a/status.html
+++ b/status.html
@@ -73,7 +73,19 @@
 					</li> -->
 					<li><a href="classes.html">CLASSES</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
+					<li><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
+					<li class="current">
+						<a href="#">RESOURCES</a>
+						<ul>
+							<li><a href="docs.html">Documents</a></li>
+							<li><a href="status.html">Equipment Status</a></li>
+							<li>
+								<a href="https://github.com/phorgemakerspace/phorgemakerspace.github.io/wiki">Maintenance
+									Wiki</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 		</section>
@@ -88,7 +100,7 @@
 							<div class="row">
 								<div class="col-12">
 									<header class="major">
-										<h2>Phorge Equipment Status</h2>
+										<h2>Equipment Status</h2>
 									</header>
 									<iframe style="width: 100%; height: 450px;"
 										src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbHwTWyzAb-oT-zcEToyRYrGP9VM_5soOe39NaZDH842eFan_myVE2aYPKf8UH1ljRMJKeIcZS0Jl7/pubhtml?gid=721249877&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A3:H13"></iframe>
