--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 							</div>
 							<footer>
 								<ul class="actions">
-									<li><a href="https://goo.gl/maps/BXsVG1juzp2Qfq8w8" target="_blank"
+									<li><a href="https://maps.app.goo.gl/5MNH7pxU88QUvR628" target="_blank"
 											class="button">Get Directions</a></li>
 								</ul>
 							</footer>
