--- a/faq.html
+++ b/faq.html
@@ -158,7 +158,7 @@
 								<li>
 									<h3>address</h3>
 									<p style="text-align: left;">
-										556 Broadway St<br />
+										1205 Broadway St<br />
 										Sheridan, WY 82801
 									</p>
 								</li>
@@ -169,7 +169,7 @@
 								</li>
 								<li>
 									<h3>phone</h3>
-									<p style="text-align: left;">302-751-2344</p>
+									<p style="text-align: left;">307-429-0011</p>
 								</li>
 							</ul>
 						</section>
@@ -180,9 +180,8 @@
 								<h2>Map</h2>
 							</header>
 							<div class="mapouter">
-								<div class="gmap_canvas"><iframe width="600" height="200" id="gmap_canvas"
-										src="https://maps.google.com/maps?q=556%20broadway%20st%20sheridan%20wy&t=&z=19&ie=UTF8&iwloc=&output=embed"
-										frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+								<div class="gmap_canvas"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=phorge+makerspace&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+									
 									<br>
 									<style>
 										.mapouter {
@@ -204,7 +203,7 @@
 							</div>
 							<footer>
 								<ul class="actions">
-									<li><a href="https://goo.gl/maps/BXsVG1juzp2Qfq8w8" target="_blank"
+									<li><a href="https://maps.app.goo.gl/5MNH7pxU88QUvR628" target="_blank"
 											class="button">Get Directions</a></li>
 								</ul>
 							</footer>
