--- a/classes.html
+++ b/classes.html
@@ -71,7 +71,7 @@
 									Membership</a></li>
 						</ul>
 					</li> -->
-					<li class="current"><a href="classes.html">CLASSES</a></li>
+					<li class="current"><a href="classes.html">EVENTS</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
 					<li><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
@@ -100,9 +100,10 @@
 							<div class="row">
 								<div class="col-12">
 									<header class="major">
-										<h2>Classes</h2>
+										<h2>Events</h2>
 									</header>
-									<p>Class list coming soon!</p>
+									<p><!-- Ticket Tailor Widget. Paste this into your website where you want the widget to appear. Do not change the code or the widget may not work properly. -->
+										<div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/phorgemakerspace/?ref=website_widget&show_search_filter=true&show_date_filter=true&show_sort=true" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg_186837" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://cdn.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/phorgemakerspace/?ref=website_widget&show_search_filter=true&show_date_filter=true&show_sort=true" data-type="inline" data-inline-minimal="true" data-inline-show-logo="false" data-inline-bg-fill="false" data-inline-inherit-ref-from-url-param="" data-inline-ref="website_widget"></script></div><!-- End of Ticket Tailor Widget --></p>
 								</div>
 							</div>
 						</section>
@@ -135,7 +136,7 @@
 								</li>
 								<li>
 									<h3>phone</h3>
-									<p style="text-align: left;">307-429-0011</p>
+									<p style="text-align: left;">307-429-1164</p>
 								</li>
 							</ul>
 						</section>
