--- a/equipment.html
+++ b/equipment.html
@@ -71,7 +71,7 @@
 									Membership</a></li>
 						</ul>
 					</li> -->
-					<li><a href="classes.html">CLASSES</a></li>
+					<li><a href="classes.html">EVENTS</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
 					<li class="current"><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
@@ -135,7 +135,7 @@
 								</li>
 								<li>
 									<h3>phone</h3>
-									<p style="text-align: left;">307-429-0011</p>
+									<p style="text-align: left;">307-429-1164</p>
 								</li>
 							</ul>
 						</section>
