--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<li><a href="#">Veroeros feugiat</a></li>
 						</ul>
 					</li> -->
-					<li><a href="classes.html">CLASSES</a></li>
+					<li><a href="classes.html">EVENTS</a></li>
 					<li><a href="membership.html">MEMBERSHIP</a></li>
 					<li><a href="equipment.html">EQUIPMENT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
@@ -271,7 +271,7 @@
 								</li>
 								<li>
 									<h3>phone</h3>
-									<p style="text-align: left;">307-429-0011</p>
+									<p style="text-align: left;">307-429-1164</p>
 								</li>
 							</ul>
 						</section>
